malware/network/cnp-deny-malware-tntbotinger-communication.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-malware-tntbotinger-communication"
spec:
  description: "Policy to deny tntbotinger communication over port 6697, 51982 and 1982"
  endpointSelector:
    matchLabels:
      app: wordpress
  egressDeny:
  - toPorts:
    - ports:
      - port: "6697"
        protocol: TCP
  ingressDeny:
  - toPorts:
    - ports:
      - port: "51982"
        protocol: TCP
      - port: "1982"
        protocol: TCP
